<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="volverOnClick"
        android:text="@string/boton_volver"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Calificacion"
        app:layout_constraintVertical_bias="0.407"
        tools:layout_editor_absoluteX="0dp"
        tools:text="@string/boton_volver" />

    <TextView
        android:id="@+id/Tv_Calificacion"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/texto_calificacion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imgpeso"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imgpeso"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Resultado"
        app:srcCompat="@mipmap/pesonormal"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@mipmap/pesonormal" />

    <TextView
        android:id="@+id/Tv_Resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/texto_valor_IMC"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/texto_IMC"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/peso"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>